# alohadb

./: .gitignore  LICENSE  NOTICE  README.md  configure.ac  install.sh  meson.build
.github/workflows/: release.yml
contrib/: Makefile  meson.build
contrib/alohadb_analytics/: alohadb_analytics--1.0.sql  alohadb_analytics.c  alohadb_analytics.control  alohadb_analytics.h  hyperfunc.c  meson.build
contrib/alohadb_approx/: Makefile  alohadb_approx--1.0--1.1.sql  alohadb_approx--1.0.sql  alohadb_approx.c  alohadb_approx.control  alohadb_approx.h  bloom_filter.c  cms.c  hll_agg.c  meson.build  tdigest.c  topk.c
contrib/alohadb_audit/: alohadb_audit--1.0--1.1.sql  alohadb_audit--1.0.sql  alohadb_audit.c  alohadb_audit.control  meson.build
contrib/alohadb_branch/: Makefile  alohadb_branch--1.0.sql  alohadb_branch.c  alohadb_branch.control  alohadb_branch.h  meson.build
contrib/alohadb_cache/: alohadb_cache--1.0.sql  alohadb_cache.c  alohadb_cache.control  alohadb_cache.h  cache_store.c  meson.build
contrib/alohadb_cdc_arrow/: Makefile  alohadb_cdc_arrow--1.0.sql  alohadb_cdc_arrow.c  alohadb_cdc_arrow.control  arrow_builder.c  arrow_builder.h  arrow_ipc.c  meson.build
contrib/alohadb_chart/: alohadb_chart--1.0.sql  alohadb_chart.c  alohadb_chart.control  meson.build
contrib/alohadb_columnar/: alohadb_columnar--1.0.sql  alohadb_columnar.c  alohadb_columnar.control  alohadb_columnar.h  columnar_storage.c  meson.build
contrib/alohadb_cron/: alohadb_cron--1.0.sql  alohadb_cron.c  alohadb_cron.control  alohadb_cron.h  cron_parser.c  meson.build
contrib/alohadb_distributed/: alohadb_distributed--1.0.sql  alohadb_distributed.c  alohadb_distributed.control  meson.build
contrib/alohadb_federated/: Makefile  alohadb_federated--1.0.sql  alohadb_federated.c  alohadb_federated.control  alohadb_federated.h  flower_client.c  local_train.c  meson.build
contrib/alohadb_gpu/: Makefile  alohadb_gpu--1.0.sql  alohadb_gpu.c  alohadb_gpu.control  gpu_cpu_fallback.c  gpu_vector_ops.cu  gpu_vector_ops.h  meson.build
contrib/alohadb_graphql/: alohadb_graphql--1.0.sql  alohadb_graphql.c  alohadb_graphql.control  alohadb_graphql.h  graphql_parser.c  graphql_resolver.c  meson.build
contrib/alohadb_http/: alohadb_http--1.0.sql  alohadb_http.c  alohadb_http.control  alohadb_http.h  http_client.c  meson.build
contrib/alohadb_inference/: Makefile  alohadb_inference--1.0.sql  alohadb_inference.c  alohadb_inference.control  alohadb_inference.h  meson.build  model_cache.c
contrib/alohadb_jsonschema/: alohadb_jsonschema--1.0.sql  alohadb_jsonschema.c  alohadb_jsonschema.control  alohadb_jsonschema.h  jsonschema_validator.c  meson.build
contrib/alohadb_learned_stats/: Makefile  learned_stats--1.0.sql  learned_stats.c  learned_stats.control  learned_stats.h  meson.build  model.c
contrib/alohadb_nl2sql/: Makefile  alohadb_nl2sql--1.0.sql  alohadb_nl2sql.c  alohadb_nl2sql.control  alohadb_nl2sql.h  meson.build  schema_context.c
contrib/alohadb_nosql/: alohadb_nosql--1.0.sql  alohadb_nosql.c  alohadb_nosql.control  alohadb_nosql.h  meson.build  nosql_collection.c  nosql_crud.c  nosql_query.c
contrib/alohadb_parquet/: alohadb_parquet--1.0.sql  alohadb_parquet.c  alohadb_parquet.control  alohadb_parquet.h  csv_reader.c  json_reader.c  meson.build  parquet_reader.c
contrib/alohadb_pool/: alohadb_pool--1.0.sql  alohadb_pool.c  alohadb_pool.control  alohadb_pool.h  meson.build
contrib/alohadb_query_store/: alohadb_query_store--1.0.sql  alohadb_query_store.c  alohadb_query_store.control  alohadb_query_store.h  meson.build  qs_index_advisor.c
contrib/alohadb_queue/: alohadb_queue--1.0.sql  alohadb_queue.c  alohadb_queue.control  alohadb_queue.h  meson.build  queue_ops.c
contrib/alohadb_ratelimit/: alohadb_ratelimit--1.0.sql  alohadb_ratelimit.c  alohadb_ratelimit.control  alohadb_ratelimit.h  meson.build  session_store.c
contrib/alohadb_realtime/: alohadb_realtime--1.0.sql  alohadb_realtime.c  alohadb_realtime.control  meson.build
contrib/alohadb_remote_config/: alohadb_remote_config--1.0.sql  alohadb_remote_config.c  alohadb_remote_config.control  meson.build
contrib/alohadb_restapi/: alohadb_restapi--1.0.sql  alohadb_restapi.c  alohadb_restapi.control  alohadb_restapi.h  meson.build  restapi_handler.c  restapi_http.c
contrib/alohadb_scale/: alohadb_scale--1.0.sql  alohadb_scale.c  alohadb_scale.control  meson.build
contrib/alohadb_schema_change/: alohadb_schema_change--1.0.sql  alohadb_schema_change.c  alohadb_schema_change.control  alohadb_schema_change.h  meson.build
contrib/alohadb_search/: alohadb_search--1.0.sql  alohadb_search.c  alohadb_search.control  alohadb_search.h  meson.build  search_bm25.c  search_fuzzy.c  search_geo.c  search_suggest.c
contrib/alohadb_temporal/: alohadb_temporal--1.0.sql  alohadb_temporal.c  alohadb_temporal.control  alohadb_temporal.h  meson.build
contrib/alohadb_tiering/: Makefile  alohadb_tiering--1.0.sql  alohadb_tiering.c  alohadb_tiering.control  alohadb_tiering.h  meson.build
contrib/alohadb_timeseries/: alohadb_timeseries--1.0.sql  alohadb_timeseries.c  alohadb_timeseries.control  alohadb_timeseries.h  meson.build
contrib/alohadb_vault/: alohadb_vault--1.0.sql  alohadb_vault.c  alohadb_vault.control  alohadb_vault.h  meson.build
contrib/alohadb_vectorize/: alohadb_vectorize--1.0.sql  alohadb_vectorize.c  alohadb_vectorize.control  meson.build
src/backend/: meson.build
src/backend/access/: Makefile  meson.build
src/backend/catalog/: genbki.pl
src/backend/commands/: tablecmds.c
src/backend/executor/: Makefile  execExpr.c  execProcnode.c  execVectorExpr.c  meson.build  nodeGraphScan.c  nodeVectorScan.c
src/backend/jit/: jit.c
src/backend/libpq/: meson.build
src/backend/parser/: Makefile  meson.build  parse_graph.c
src/backend/postmaster/: postmaster.c
src/backend/replication/: Makefile  meson.build  walreceiver.c  walsender.c
src/include/access/: ivfflat_guc.h  xlog.h
src/include/catalog/: Makefile  meson.build
src/include/commands/: tablecmds_online.h
src/include/common/: xxhash.h
(+70 files in other folders)
